@@ -58,6 +58,9 @@ Version 8.21
 15. If a forward reference was repeated with an upper limit of around 2000,
     it caused the error "internal error: overran compiling workspace". This
     is now checked, and causes "too many forward references" instead.  
+    
+16. A repeated forward reference in a pattern such as (a)(?2){2}(.) was
+    incorrectly expecting the subject to contain another "a" after the start.
 
 
 Version 8.20 21-Oct-2011
